<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="#F44336"
                android:onClick="buttonPressed"
                android:text="@string/c"
                android:textColor="#FFFFFF"
                android:textColorHint="#000000"
                android:textSize="16sp"
                app:backgroundTint="@color/purple_500" />

            <ImageButton
                android:id="@+id/buttonBack"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/purple_500"
                android:contentDescription="@string/back_button"
                android:src="@drawable/abc_vector_test"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/buttonPercent"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="#F44336"
                android:onClick="buttonPressed"
                android:paddingTop="5dp"
                android:text="@string/_percent"
                android:textColor="#FFFFFF"
                android:textColorHint="#000000"
                app:backgroundTint="@color/purple_500" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="#F44336"
                android:onClick="buttonPressed"
                android:paddingTop="5dp"
                android:text="@string/_divide"
                android:textColor="#FFFFFF"
                android:textColorHint="#000000"
                app:backgroundTint="@color/purple_500" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@color/purple_700"
                android:onClick="buttonPressed"
                android:text="@string/_7"
                android:textColor="#FFFFFF"
                android:textColorHint="@android:color/darker_gray"
                app:backgroundTint="#12549C" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@color/purple_700"
                android:onClick="buttonPressed"
                android:text="@string/_8"
                android:textColor="#FFFFFF"
                app:backgroundTint="#12549C" />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@color/purple_700"
                android:onClick="buttonPressed"
                android:text="@string/_9"
                android:textColor="#FFFFFF"
                app:backgroundTint="#12549C" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="#F44336"
                android:onClick="buttonPressed"
                android:text="@string/_mul"
                android:textColor="#FFFFFF"
                android:textColorHint="#000000"
                app:backgroundTint="@color/purple_500" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@color/purple_700"
                android:onClick="buttonPressed"
                android:text="@string/_4"
                android:textColor="#FFFFFF"
                app:backgroundTint="#12549C" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@color/black"
                android:onClick="buttonPressed"
                android:text="@string/_5"
                android:textColor="#FFFFFF"
                app:backgroundTint="#12549C" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@color/purple_700"
                android:onClick="buttonPressed"
                android:text="@string/_6"
                android:textColor="#FFFFFF"
                app:backgroundTint="#12549C" />

            <Button
                android:id="@+id/buttonAdd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="#F44336"
                android:onClick="buttonPressed"
                android:text="@string/_add"
                android:textColor="#FFFFFF"
                android:textColorHint="#000000"
                app:backgroundTint="@color/purple_500" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@color/purple_700"
                android:onClick="buttonPressed"
                android:text="@string/_1"
                android:textColor="#FFFFFF"
                app:backgroundTint="#12549C" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@color/black"
                android:onClick="buttonPressed"
                android:text="@string/_2"
                android:textColor="#FFFFFF"
                app:backgroundTint="#12549C" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@color/purple_700"
                android:onClick="buttonPressed"
                android:text="@string/_3"
                android:textColor="#FFFFFF"
                app:backgroundTint="#12549C" />

            <Button
                android:id="@+id/buttonSubtract"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="#F44336"
                android:onClick="buttonPressed"
                android:text="@string/_sub"
                android:textColor="#FFFFFF"
                android:textColorHint="#000000"
                app:backgroundTint="@color/purple_500" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonPlusMinus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@color/black"
                android:onClick="buttonPressed"
                android:text="@string/_plusMinus"
                android:textColor="#FFFFFF"
                app:backgroundTint="#12549C" />

            <Button
                android:id="@+id/button0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@color/purple_700"
                android:onClick="buttonPressed"
                android:text="@string/_0"
                android:textColor="#FFFFFF"
                app:backgroundTint="#12549C" />

            <Button
                android:id="@+id/buttonDot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@color/black"
                android:onClick="buttonPressed"
                android:text="@string/_dot"
                android:textColor="#FFFFFF"
                app:backgroundTint="#12549C" />

            <Button
                android:id="@+id/buttonEqual"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="#F44336"
                android:onClick="buttonPressed"
                android:text="@string/_equal"
                android:textColor="#FFFFFF"
                android:textColorHint="#000000"
                app:backgroundTint="@color/purple_500" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>